objects/ProductPerformance__c.object
<CustomObject>
    <fields>
        <fullName>MorningstarRatingOverallStars__c</fullName>
        <formula>IF(TEXT(MorningstarRatingOverall__c)="5",IMAGE("/img/samples/stars_500.gif", "5 Stars"),
IF(TEXT(MorningstarRatingOverall__c)="4",IMAGE("/img/samples/stars_400.gif", "4 Stars"),
IF(TEXT(MorningstarRatingOverall__c)="3",IMAGE("/img/samples/stars_300.gif", "3 Stars"),
IF(TEXT(MorningstarRatingOverall__c)="2",IMAGE("/img/samples/stars_200.gif", "2 Stars"),
IF(TEXT(MorningstarRatingOverall__c)="1",IMAGE("/img/samples/stars_100.gif", "1 Star"),
IMAGE("/img/samples/stars_000.gif", "0 Stars"))))))</formula>
        <label>Morningstar Rating Overall (Stars)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MorningstarRatingOverall__c</fullName>
        <label>Morningstar Rating Overall</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NAV10YearMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAV10Year__c</formula>
        <label>NAV 10 Year Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV10YearQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAV10Year__c</formula>
        <label>NAV 10 Year Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV10YearYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAV10Year__c</formula>
        <label>NAV 10 Year Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV10Year__c</fullName>
        <label>NAV 10 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1DayMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAV1Day__c</formula>
        <label>NAV 1 Day Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1DayQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAV1Day__c</formula>
        <label>NAV 1 Day Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1DayYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAV1Day__c</formula>
        <label>NAV 1 Day Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1Day__c</fullName>
        <label>NAV 1 Day</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1MonthMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAV1Month__c</formula>
        <label>NAV 1 Month Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1MonthQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAV1Month__c</formula>
        <label>NAV 1 Month Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1MonthYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAV1Month__c</formula>
        <label>NAV 1 Month Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1Month__c</fullName>
        <label>NAV 1 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1YearMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAV1Year__c</formula>
        <label>NAV 1 Year Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1YearQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAV1Year__c</formula>
        <label>NAV 1 Year Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1YearYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAV1Year__c</formula>
        <label>NAV 1 Year Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV1Year__c</fullName>
        <label>NAV 1 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV3MonthMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAV3Month__c</formula>
        <label>NAV 3 Month Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV3MonthQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAV3Month__c</formula>
        <label>NAV 3 Month Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV3MonthYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAV3Month__c</formula>
        <label>NAV 3 Month Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV3Month__c</fullName>
        <label>NAV 3 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV3YearMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAV3Year__c</formula>
        <label>NAV 3 Year Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV3YearQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAV3Year__c</formula>
        <label>NAV 3 Year Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV3YearYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAV3Year__c</formula>
        <label>NAV 3 Year Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAV3Year__c</fullName>
        <description>NAV 3 Year</description>
        <label>NAV 3 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVChange__c</fullName>
        <formula>NAV__c - NAVPriorDay__c</formula>
        <label>NAV Change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NAVInceptionAnnualizedMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAVInceptionAnnualized__c</formula>
        <label>NAV Inception Annualized Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionAnnualizedQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAVInceptionAnnualized__c</formula>
        <label>NAV Inception Annualized Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionAnnualizedYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAVInceptionAnnualized__c</formula>
        <label>NAV Inception Annualized Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionAnnualized__c</fullName>
        <label>NAV Inception Annualized</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionCumulativeMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAVInceptionCumulative__c</formula>
        <label>NAV Inception Cumulative Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionCumulativeQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAVInceptionCumulative__c</formula>
        <label>NAV Inception Cumulative Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionCumulativeYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAVInceptionCumulative__c</formula>
        <label>NAV Inception Cumulative Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionCumulative__c</fullName>
        <label>NAV Inception Cumulative</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAVInception__c</formula>
        <label>NAV Inception Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAVInception__c</formula>
        <label>NAV Inception Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInceptionYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAVInception__c</formula>
        <label>NAV Inception Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVInception__c</fullName>
        <label>NAV Inception</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVMTDMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAVMTD__c</formula>
        <label>NAV MTD Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVMTDQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAVMTD__c</formula>
        <label>NAV MTD Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVMTDYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAVMTD__c</formula>
        <label>NAV MTD Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVMTD__c</fullName>
        <label>NAV MTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAV__c</formula>
        <label>NAV Month-End</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NAVPercentChange__c</fullName>
        <formula>IF (PriorProductPerformance__r.NAV__c &lt;&gt; 0, NAVChange__c / PriorProductPerformance__r.NAV__c/100, 0)</formula>
        <label>NAV Percent Change</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVPriorDay__c</fullName>
        <formula>PriorProductPerformance__r.NAV__c</formula>
        <label>NAV Prior Day</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NAVQTDMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAVQTD__c</formula>
        <label>NAV QTD Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVQTDQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAVQTD__c</formula>
        <label>NAV QTD Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVQTDYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAVQTD__c</formula>
        <label>NAV QTD Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVQTD__c</fullName>
        <label>NAV QTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAV__c</formula>
        <label>NAV Quarter-End</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NAVYTDMonthEnd__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.NAVYTD__c</formula>
        <label>NAV YTD Month-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVYTDQuarterEnd__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.NAVYTD__c</formula>
        <label>NAV YTD Quarter-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVYTDYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAVYTD__c</formula>
        <label>NAV YTD Year-End</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVYTD__c</fullName>
        <label>NAV YTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NAVYearEnd__c</fullName>
        <formula>PriorYearEndProductPerformance__r.NAV__c</formula>
        <label>NAV Year-End</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NAV__c</fullName>
        <label>NAV</label>
        <precision>16</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NextBusinessDateProdPerfExtId__c</fullName>
        <externalId>true</externalId>
        <label>Next Business Date Prod Perf ExtId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NextBusinessDate__c</fullName>
        <label>Next Business Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ParentProductId__c</fullName>
        <formula>CASESAFEID (Product__r.ParentProduct__c )</formula>
        <label>Parent Product Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark10YearME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmark10Year__c</formula>
        <label>Primary Benchmark 10 Year ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark10YearQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmark10Year__c</formula>
        <label>Primary Benchmark 10 Year QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark10YearYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmark10Year__c</formula>
        <label>Primary Benchmark 10 Year YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark10Year__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.X10Year__c</formula>
        <label>Primary Benchmark 10 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayGrossME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmark1DayGross__c</formula>
        <label>Primary Benchmark 1 Day Gross ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayGrossQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmark1DayGross__c</formula>
        <label>Primary Benchmark 1 Day Gross QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayGrossYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmark1DayGross__c</formula>
        <label>Primary Benchmark 1 Day Gross YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayGross__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.X1DayGross__c</formula>
        <label>Primary Benchmark 1 Day Gross</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayNetME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmark1DayNet__c</formula>
        <label>Primary Benchmark 1 Day Net ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayNetQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmark1DayNet__c</formula>
        <label>Primary Benchmark 1 Day Net QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayNetYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmark1DayNet__c</formula>
        <label>Primary Benchmark 1 Day Net YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayNet__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.X1DayNet__c</formula>
        <label>Primary Benchmark 1 Day Net</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayPriceChangeME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmark1DayPriceChange__c</formula>
        <label>Primary Benchmark 1 Day Price Change ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayPriceChangeQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmark1DayPriceChange__c</formula>
        <label>Primary Benchmark 1 Day Price Change QE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayPriceChangeYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmark1DayPriceChange__c</formula>
        <label>Primary Benchmark 1 Day Price Change YE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1DayPriceChange__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.X1DayPriceChange__c</formula>
        <label>Primary Benchmark 1 Day Price Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1MonthME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmark1Month__c</formula>
        <label>Primary Benchmark 1 Month ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1MonthQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmark1Month__c</formula>
        <label>Primary Benchmark 1 Month QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1MonthYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmark1Month__c</formula>
        <label>Primary Benchmark 1 Month YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1Month__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.X1Month__c</formula>
        <label>Primary Benchmark 1 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1YearME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmark1Year__c</formula>
        <label>Primary Benchmark 1 Year ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1YearQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmark1Year__c</formula>
        <label>Primary Benchmark 1 Year QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1YearYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmark1Year__c</formula>
        <label>Primary Benchmark 1 Year YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark1Year__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.X1Year__c</formula>
        <label>Primary Benchmark 1 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark3MonthME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmark3Month__c</formula>
        <label>Primary Benchmark 3 Month ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark3MonthQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmark3Month__c</formula>
        <label>Primary Benchmark 3 Month QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark3MonthYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmark3Month__c</formula>
        <label>Primary Benchmark 3 Month YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark3Month__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.X3Month__c</formula>
        <label>Primary Benchmark 3 Month</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark3YearME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmark3Year__c</formula>
        <label>Primary Benchmark 3 Year ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark3YearQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmark3Year__c</formula>
        <label>Primary Benchmark 3 Year QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark3YearYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmark3Year__c</formula>
        <label>Primary Benchmark 3 Year YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmark3Year__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.X3Year__c</formula>
        <label>Primary Benchmark 3 Year</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmark__c</formula>
        <label>Primary Benchmark ME</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkMTDME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmarkMTD__c</formula>
        <label>Primary Benchmark MTD ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkMTDQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmarkMTD__c</formula>
        <label>Primary Benchmark MTD QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkMTDYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmarkMTD__c</formula>
        <label>Primary Benchmark MTD YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkMTD__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.MTD__c</formula>
        <label>Primary Benchmark MTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkPerformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Benchmark Performance</label>
        <referenceTo>BenchmarkPerformance__c</referenceTo>
        <relationshipLabel>Product Performance (Primary)</relationshipLabel>
        <relationshipName>ProductPerformancePrimaryBenchmark</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkPriceME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmarkPrice__c</formula>
        <label>Primary Benchmark Price ME</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkPriceQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmarkPrice__c</formula>
        <label>Primary Benchmark Price QE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkPriceYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmarkPrice__c</formula>
        <label>Primary Benchmark Price YE</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkPrice__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.Price__c</formula>
        <label>Primary Benchmark Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmark__c</formula>
        <label>Primary Benchmark QE</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkQTDME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmarkQTD__c</formula>
        <label>Primary Benchmark QTD ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkQTDQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmarkQTD__c</formula>
        <label>Primary Benchmark QTD QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkQTDYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmarkQTD__c</formula>
        <label>Primary Benchmark QTD YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkQTD__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.QTD__c</formula>
        <label>Primary Benchmark QTD</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkRichTextName__c</fullName>
        <label>Primary Benchmark Rich Text Name</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkSinceInceptionME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmarkSinceInception__c</formula>
        <label>Primary Benchmark Since Inception ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkSinceInceptionQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmarkSinceInception__c</formula>
        <label>Primary Benchmark Since Inception QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkSinceInceptionYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmarkSinceInception__c</formula>
        <label>Primary Benchmark Since Inception YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkSinceInception__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.SinceInception__c</formula>
        <label>Primary Benchmark Since Inception</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkTotalGrossME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmarkTotalGross__c</formula>
        <label>Primary Benchmark Total Gross ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkTotalGrossQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmarkTotalGross__c</formula>
        <label>Primary Benchmark Total Gross QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkTotalGrossYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmarkTotalGross__c</formula>
        <label>Primary Benchmark Total Gross YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkTotalGross__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.TotalGross__c</formula>
        <label>Primary Benchmark Total Gross</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkTotalNetME__c</fullName>
        <formula>PriorMonthEndProductPerformance__r.PrimaryBenchmarkTotalNet__c</formula>
        <label>Primary Benchmark Total Net ME</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkTotalNetQE__c</fullName>
        <formula>PriorQuarterEndProductPerformance__r.PrimaryBenchmarkTotalNet__c</formula>
        <label>Primary Benchmark Total Net QE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkTotalNetYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmarkTotalNet__c</formula>
        <label>Primary Benchmark Total Net YE</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkTotalNet__c</fullName>
        <formula>PrimaryBenchmarkPerformance__r.TotalNet__c</formula>
        <label>Primary Benchmark Total Net</label>
        <precision>18</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PrimaryBenchmarkYE__c</fullName>
        <formula>PriorYearEndProductPerformance__r.PrimaryBenchmark__c</formula>
        <label>Primary Benchmark YE</label>
        <type>Text</type>
    </fields>
</CustomObject>